--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,11 +1,15 @@
 .home-stats {
-  display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-gap: var(--s-system);
 }
 
 .purple {
   color: var(--c-purple);
+}
+
+.os-grid {
+  grid-template-columns: repeat(6, 1fr);
+  grid-gap: var(--s-system);
 }
 
 .os {
@@ -15,16 +19,52 @@
 }
 
 .os-title {
-  font-size: 1.6rem;
-  margin-bottom: var(--s-safe);
+  font-size: 2.2rem;
+  text-transform: uppercase;
 }
 
 .os-value {
-  font-size: 2.8rem;
+  font-size: 1.5rem;
+  margin-top: var(--s-safe);
+  color: var(--c-surface);
+}
+
+.os-column {
+  grid-column: span 2;
+}
+
+.os-row {
+  grid-row: span 2;
+}
+
+@media screen and (max-width: 1032px) {
+  .os-grid {
+    grid-template-columns: repeat(4, 1fr);
+  }
 }
 
 @media screen and (max-width: 768px) {
   .home-stats {
     grid-template-columns: 1fr;
+  }
+
+  .os-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media screen and (max-width: 580px) {
+  .os-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .os-grid {
+    grid-template-columns: 1fr;
+  }
+
+  .os-column {
+    grid-column: span 1;
   }
 }
