Static Code Analysis and Quality Metrics (#9)
* Fix code smell for JSX props

* Generate secure random number

* Update activity ring responsiveness

* The value to the Context changes every render

* Secure way to format number with separator

--- a/src/index.css
+++ b/src/index.css
@@ -92,11 +92,6 @@ a:focus-visible {
   transform: scale(1.03);
 }
 
-a:focus-visible,
-button:focus-visible {
-  border-radius: 0.4rem;
-}
-
 .app,
 .dock {
   max-width: 142rem;
@@ -246,7 +241,7 @@ button:focus-visible {
 
 .superellipse.active {
   transform: scale(1.1);
-  border: 1px solid var(--c-ring);
+  border: 1px solid var(--c-action);
 }
 
 .superellipse.inactive svg {
