--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -38,11 +38,14 @@
 }
 
 .sidebar {
-  margin-top: var(--s-system);
+  gap: var(--s-system);
 }
 
 .production {
   grid-column: span 4;
+}
+
+.keen-slider {
   align-items: baseline;
 }
 
@@ -83,6 +86,10 @@
 .scrollable {
   max-height: 50vh;
   overflow-y: auto;
+}
+
+.move-to {
+  margin-bottom: var(--s-unit);
 }
 
 @media screen and (max-width: 768px) {
