Remove empty purple heading

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -10,9 +10,12 @@
 .card-text {
   display: block;
   font-size: 6.4rem;
-  color: var(--c-olive);
 }
 
 .card-measure {
   font-size: 3rem;
+}
+
+.accent {
+  color: var(--c-olive);
 }
