--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -1,6 +1,9 @@
 :root {
-  --c-stock: #00e3961a;
-  --c-subscription: #b25fea1a;
+  --c-stock: #00e396;
+  --c-blue: #007aff;
+  --c-subscription: #b25fea;
+  --c-neon: #04de71;
+  --p-shadow: drop-shadow(0px 0px 30px var(--c-dark));
 }
 
 .widget-title {
@@ -15,52 +18,70 @@
 }
 
 .widget-chart {
-  transition: filter 0.36s, transform 0.34s cubic-bezier(0.666, 0, 0.4, 1);
+  transition: filter 0.4s cubic-bezier(0.666, 0, 0.4, 1);
 }
 
 .widget-chart:hover {
   filter: var(--p-shadow);
-  transform: scale(1.03);
 }
 
-.widget-line circle {
-  stroke-width: 0.2rem;
+.ct-label {
+  color: var(--c-surface);
 }
 
-.widget-line circle:hover,
-.widget-line circle:focus,
-.widget-bar path:hover,
-.widget-bar path:focus {
+.ct-grid {
+  stroke: var(--c-action);
+}
+
+.widget-line .ct-point {
+  stroke-width: var(--s-system);
+}
+
+.widget-bar .ct-bar {
+  stroke-width: 8%;
+}
+
+.widget-line .ct-point:hover,
+.widget-line .ct-point:focus,
+.widget-bar .ct-bar:hover,
+.widget-bar .ct-bar:focus {
   filter: contrast(90%) brightness(125%) saturate(110%);
 }
 
-small {
-  font-size: 1.2rem;
-  text-align: center;
-}
-
-#chart-stocks {
-  color: var(--c-stock);
-}
-
-#chart-stocks circle {
+#chart-stocks .ct-series .ct-point {
   stroke: var(--c-stock);
 }
 
-#chart-subscriptions {
-  color: var(--c-subscription);
+#chart-stocks .ct-series .ct-line {
+  stroke: var(--c-stock);
 }
 
-#chart-subscriptions circle {
+#chart-stocks .ct-series .ct-area {
+  fill: var(--c-stock);
+}
+
+#chart-health .ct-series .ct-bar {
+  stroke: var(--c-blue);
+}
+
+#chart-promotions .ct-series .ct-bar {
+  stroke: var(--c-neon);
+}
+
+#chart-subscriptions .ct-series .ct-point {
   stroke: var(--c-subscription);
+}
+
+#chart-subscriptions .ct-series .ct-line {
+  stroke: var(--c-subscription);
+}
+
+#chart-subscriptions .ct-series .ct-area {
+  fill: var(--c-subscription);
 }
 
 @media screen and (max-width: 768px) {
   .widget-chart {
     grid-column: span 2;
-  }
-
-  .widget-line circle {
-    stroke-width: var(--s-dock);
   }
 }
