--- a/src/pages/Products/Vault/Vault.css
+++ b/src/pages/Products/Vault/Vault.css
@@ -3,6 +3,11 @@
   --s-stroke: 12px;
 }
 
+button {
+  background-color: transparent;
+  color: inherit;
+}
+
 .activity {
   height: var(--s-radio);
   width: var(--s-radio);
@@ -28,10 +33,6 @@
 
 .background {
   stroke: var(--c-action);
-}
-
-.conditions {
-  margin-top: 1.6rem;
 }
 
 .context {
