--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -3,7 +3,7 @@
 }
 
 .box-description {
-  font-size: 1.7rem;
+  font-size: 2.2rem;
   text-transform: uppercase;
-  margin-top: 0.4rem;
+  line-height: 2;
 }
