Pass Accessor via props to keep computation

--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -84,6 +84,14 @@
   overflow-y: auto;
 }
 
+.portfolio {
+  border: 0;
+}
+
+.portfolio legend {
+  font-weight: bold;
+}
+
 @media screen and (max-width: 768px) {
   .expert,
   .toolbar,
