Portfolio for investments (#13)
* Refactor margin-top property

* Create custom text field

* Create placeholder for future calc

* Refactor grid-gap property

* Add formulas for Growth

* Create formulas for Dividends

* Clean up calculations for analytics

* Create shared input field to reduce duplicate

* Create shared store to reduce duplicate

* Pass Accessor via props to keep computation

* Get handler from the same store

--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -26,7 +26,7 @@
 }
 
 .tour-list-item {
-  padding: var(--s-unit) 1rem;
+  padding: var(--s-unit) 1rem var(--s-unit) var(--s-safe);
   font-size: inherit;
   background-color: transparent;
   border-radius: var(--s-unit);
@@ -35,10 +35,6 @@
 .tour-list-item:hover,
 .tour-list-item[aria-selected='true'] {
   background-color: var(--c-active);
-}
-
-.sidebar {
-  gap: var(--s-system);
 }
 
 .production {
@@ -88,12 +84,18 @@
   overflow-y: auto;
 }
 
-.move-to {
-  margin-bottom: var(--s-unit);
+.portfolio {
+  border: 0;
+}
+
+.portfolio legend {
+  font-weight: bold;
 }
 
 @media screen and (max-width: 768px) {
-  .expert {
+  .expert,
+  .toolbar,
+  .portfolio {
     grid-template-columns: 1fr;
   }
 
@@ -103,10 +105,6 @@
 
   .right-edge {
     margin: var(--s-unit);
-  }
-
-  .toolbar {
-    grid-template-columns: 1fr;
   }
 }
 
