--- a/src/index.css
+++ b/src/index.css
@@ -294,6 +294,14 @@ a:focus-visible {
   background-color: var(--c-show);
 }
 
+.provision {
+  margin-top: 1.6rem;
+}
+
+.gap {
+  gap: var(--s-system);
+}
+
 @media screen and (max-width: 768px) {
   body {
     padding-bottom: 9.2rem;
