--- a/src/index.css
+++ b/src/index.css
@@ -302,6 +302,11 @@ a:focus-visible {
   gap: var(--s-system);
 }
 
+.term {
+  font-size: 1.5rem;
+  line-height: 1.6;
+}
+
 @media screen and (max-width: 768px) {
   body {
     padding-bottom: 9.2rem;
