--- a/src/pages/NewsFeed/NewsFeed.css
+++ b/src/pages/NewsFeed/NewsFeed.css
@@ -17,7 +17,7 @@ caption {
 }
 
 tbody tr:nth-child(odd) {
-  background-color: var(--c-white);
+  background-color: var(--c-primary);
 }
 
 tbody tr:nth-child(even) {
