--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,6 @@ body {
   background-color: var(--c-white);
   color: var(--c-black);
   min-height: 100vh;
-  padding-bottom: var(--s-safe);
 }
 
 a {
@@ -87,6 +86,10 @@ button:active {
 
 a:focus-visible {
   transform: scale(1.03);
+}
+
+.app {
+  padding-bottom: var(--s-safe);
 }
 
 .app,
@@ -319,7 +322,7 @@ a:focus-visible {
 }
 
 @media screen and (max-width: 768px) {
-  body {
+  .app {
     padding-bottom: 9.2rem;
   }
 
@@ -358,6 +361,6 @@ a:focus-visible {
 
 @media screen and (min-width: 2560px) {
   html {
-    font-size: 110%;
+    font-size: 108%;
   }
 }
