--- a/src/pages/Products/Products.css
+++ b/src/pages/Products/Products.css
@@ -10,7 +10,7 @@
 }
 
 .widget-main {
-  font-size: var(--s-ellipse);
+  font-size: var(--s-finger);
   margin-bottom: 1.6rem;
   font-weight: normal;
 }
