--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
   --c-ghost: #ebfff0;
   --c-show: #fce8e6;
   --c-blue: #0071e3;
-  --s-ellipse: 4.4rem;
+  --s-finger: 4.4rem;
   --s-medium: 2rem;
   --s-dock: 2.2rem;
   --s-system: 1.4rem;
@@ -22,6 +22,7 @@
   --s-safe: 1.2rem;
   --s-screen: 3.4rem;
   --s-entry: 4rem;
+  --s-leading: 1.6;
   --p-blur: blur(14px) saturate(180%);
 }
 
@@ -121,7 +122,7 @@ a:focus-visible {
 }
 
 .info {
-  line-height: 1.8;
+  line-height: var(--s-leading);
   margin: var(--s-system) 0 var(--s-medium);
 }
 
@@ -186,7 +187,7 @@ a:focus-visible {
 }
 
 .on-scroll {
-  transform: translateY(var(--s-ellipse));
+  transform: translateY(var(--s-finger));
   transition: 0.8s transform cubic-bezier(0.07, 0.89, 0.79, 0.95);
 }
 
@@ -241,8 +242,8 @@ a:focus-visible {
 }
 
 .superellipse {
-  min-width: var(--s-ellipse);
-  height: var(--s-ellipse);
+  min-width: var(--s-finger);
+  height: var(--s-finger);
   border-radius: 25%;
 }
 
@@ -318,7 +319,7 @@ a:focus-visible {
 
 .term {
   font-size: 1.5rem;
-  line-height: 1.6;
+  line-height: var(--s-leading);
 }
 
 @media screen and (max-width: 768px) {
@@ -355,7 +356,7 @@ a:focus-visible {
 
 @media screen and (min-width: 1920px) {
   html {
-    font-size: 82%;
+    font-size: 80%;
   }
 }
 
