--- a/src/index.css
+++ b/src/index.css
@@ -26,6 +26,14 @@
   --p-blur: blur(14px) saturate(180%);
 }
 
+@font-face {
+  font-display: swap;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  src: url('assets/fonts/inter-v12-latin-regular.woff2') format('woff2');
+}
+
 html {
   font-size: 62.5%;
 }
