--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -109,10 +109,12 @@
 
 @keyframes toast-enter {
   0% {
+    opacity: 0.01;
     transform: translateY(100%) translateX(-50%);
   }
 
   100% {
+    opacity: 1;
     transform: translateY(var(--s-safe)) translateX(-50%);
   }
 }
