--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -61,10 +61,18 @@
   top: 0;
   left: 50%;
   min-width: var(--s-modal);
-  height: 100%;
+  height: calc(100% - var(--s-system));
   z-index: 5;
   border-radius: 1rem 1rem 0 0;
   animation: toast-enter cubic-bezier(0.36, 0.66, 0.04, 1) 0.5s both;
+}
+
+.sheet-content {
+  height: 100%;
+}
+
+.alert-content {
+  max-height: 50vh;
 }
 
 .bottom-main {
@@ -72,8 +80,9 @@
 }
 
 .scrollable {
-  max-height: 50vh;
+  height: 100%;
   overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .portfolio {
