--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
   --c-ghost: #ebfff0;
   --c-show: #fce8e6;
   --c-blue: #0071e3;
-  --c-olive: #61bea2;
+  --c-energy: #f2a33c;
   --s-line: 0.6rem;
   --s-unit: 0.8rem;
   --s-safe: 1.2rem;
@@ -197,15 +197,6 @@ a:focus-visible {
   text-decoration: underline;
 }
 
-.on-scroll {
-  opacity: 0.5;
-  transition: 0.8s opacity cubic-bezier(0.07, 0.89, 0.79, 0.95);
-}
-
-.animate {
-  opacity: 1;
-}
-
 .grey-dark {
   color: var(--c-grey);
 }
@@ -215,7 +206,7 @@ a:focus-visible {
 }
 
 .box {
-  background-color: var(--c-black);
+  background-color: var(--c-dark);
   color: var(--c-white);
 }
 
@@ -266,7 +257,6 @@ a:focus-visible {
 .superellipse.active {
   background-color: var(--c-white);
   transform: scale(1.1);
-  border: 1px solid var(--c-action);
 }
 
 .superellipse.inactive svg {
