Update card colors via duolingo

--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   --c-show: #fce8e6;
   --c-blue: #0071e3;
   --c-energy: #f2a33c;
+  --c-alice: #fef6d6;
   --s-line: 0.6rem;
   --s-unit: 0.8rem;
   --s-safe: 1.2rem;
