--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -66,7 +66,7 @@
   animation: toast-enter cubic-bezier(0.36, 0.66, 0.04, 1) 0.5s both;
 }
 
-.sheet-content {
+.content-tall {
   height: 100%;
 }
 
@@ -79,7 +79,6 @@
 }
 
 .scrollable {
-  height: 100%;
   overflow-y: auto;
   overflow-x: hidden;
 }
