Add view with transaction details

--- a/src/pages/Profile/Expert/Expert.css
+++ b/src/pages/Profile/Expert/Expert.css
@@ -2,6 +2,11 @@
   --c-lavender: #eaddff;
 }
 
+button:disabled {
+  cursor: not-allowed;
+  color: var(--c-backdrop);
+}
+
 .document {
   background-color: var(--c-lavender);
 }
